--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Georgia;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +9,122 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+nav{
+      position: relative;
+      /* margin: 50px auto 0; */
+      width: 1000px; 
+      height: 50px;
+      background: rgb(22, 147, 250);
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+      font-size: 0;
+      box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
+  }
+  nav a{
+      font-size: 17px;
+      color: white;
+      text-decoration: none;
+      line-height: 50px;
+      position: relative;
+      z-index: 1;
+      display: inline-block;
+      text-align: center;
+  }
+  nav .animation{
+      position: absolute;
+      height: 100%;
+      height: 5px;
+      bottom: 0; 
+      z-index: 0;
+      background: white;
+      border-radius: 8px;
+      transition: all .5s ease 0s;
+  }
+  nav a:nth-child(1){
+      width: 100px;
+  }
+  nav .start-home, a:nth-child(1):hover~.animation{
+      width: 100px;
+      left: 0;
+  }
+  nav a:nth-child(2){
+      width: 110px;
+  }
+  nav a:nth-child(2):hover~.animation{
+      width: 110px;
+      left: 100px;
+  }
+  nav a:nth-child(3){
+      width: 100px;
+  }
+  nav a:nth-child(3):hover~.animation{
+      width: 100px;
+      left: 210px;
+  }
+  nav a:nth-child(4){
+      width: 100px;
+  }
+  nav a:nth-child(4):hover~.animation{
+      width: 100px;
+      left: 310px;
+  }
+  nav a:nth-child(5){
+      width: 100px;
+  }
+  nav a:nth-child(5):hover~.animation{
+      width: 100px;
+      left: 410px;
+  }
+  nav a:nth-child(6){
+    width: 100px;
+}
+nav a:nth-child(6):hover~.animation{
+    width: 100px;
+    left: 510px;
+}
+nav a:nth-child(7){
+    width: 100px;
+}
+nav a:nth-child(7):hover~.animation{
+    width: 100px;
+    left: 610px;
+}
+nav a:nth-child(8){
+    width: 100px;
+}
+nav a:nth-child(8):hover~.animation{
+    width: 100px;
+    left: 710px;
+}
+#bar {
+  background-color: rgb(22, 147, 250);
+  color: white;
+  /* padding: 10px;  */
+  font-size: medium;
+  box-shadow: 0px 0px 10px rgb(61, 60, 60);
+   width:100%;
+}
+#heading{
+  text-align: center;
+  font-size: 30px; 
+  color: rgb(22, 147, 250);
+  padding: 10px; 
+  text-shadow: 0px 2px 2px rgb(136, 128, 128);
+
+} 
+.parent-container {
+  display: flex;
+  flex-direction: column;
+  margin-right:150px;
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+  width:1000px;
+  border-radius:10px;
+  padding-bottom: 10px;
+  justify-content: center; 
+  align-items: center;
+
+}
+.container {
+  align-self: flex-start; /* aligns the element to the start of the parent container */
+}  
+
